--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="keyword" content="papier, toaleta, papier toaletowy, najlepsza firma">
+    <meta name="keyword" content="grafika, obrazki, design, najlepsza firma">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>FIRMA</title>
+    <title>GRAFPOL</title>
 </head>
 
 <body>
@@ -15,8 +15,8 @@
         <section id="start" class="tlo wrapper">
             <div class="container starter">
                 <div class="tekst">
-                    <h1 class="text-responsive-big">NAZWA FIRMY</h1>
-                    <p class="text-responsive">Robimy to co robimy lepiej niż inni</p>
+                    <h1 class="text-responsive-big">GRAFPOL</h1>
+                    <p class="text-responsive">Robimy grafiki lepiej niż inni</p>
                 </div>
                 <a href="#ofirmie">
                     <img src="img/arrow.svg" alt="Przejdź dalej!" class="strzalka">
