--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <section id="start" class="tlo wrapper">
             <div class="container starter">
                 <div class="tekst">
-                    <h1 class="text-responsive-big">GRAFPOL</h1>
+                    <h1 class="text-responsive-big nazwa">GRAFPOL</h1>
                     <p class="text-responsive">Robimy grafiki lepiej niż inni</p>
                 </div>
                 <a href="#ofirmie">
@@ -26,7 +26,7 @@
 
         <section id="ofirmie" class="wrapper">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbar">
-                <a class="navbar-brand" href="#">FIRMA</a>
+                <a class="navbar-brand nazwa" href="#">GRAFPOL</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -63,11 +63,11 @@
                         <img src="img/tlo.jpg" class="img" alt="O firmie" />
                     </div>
                     <div class="col-sm-6 firma">
-                        <p class="text-responsive">Lorem, ipsum dolor sit amet consectetur adipisicing elit. In tenetur
-                            numquam nihil laboriosam eaque
-                            voluptatem blanditiis perferendis hic, adipisci repudiandae expedita, eum veniam assumenda
-                            deleniti
-                            molestiae omnis consequatur recusandae. Animi!</p>
+                        <p class="text-responsive">Jesteśmy <span class="nazwa">GRAFPOL</span>, najlepszą firmą
+                            zajmującą się grafikami w Polsce od 2009 roku. Tworzymy grafiki promocyjne dla takich firm
+                            jak PKO BP,
+                            Żabka, a nawet dla Opolskiego Elektryczniaka. Dzięki umiejętnościom naszych grafików
+                            zdobyliśmy wiele nagród na międzynarodowych konkursach.</p>
                     </div>
                 </div>
             </div>
@@ -123,29 +123,29 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-6">
-                        <p class="text-responsive">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo quasi
-                            aperiam minima possimus corporis, eveniet veniam doloremque consectetur beatae voluptatibus
-                            ipsum ut expedita dicta, debitis ex explicabo ipsa ab mollitia!</p>
+                        <p class="text-responsive">Nasze usługi w przystępnych cenach pozwalają każdemu skorzystać z
+                            grafik naszej firmy. Aby skorzystać z którejś z usług proszę skontaktować się przez
+                            formularz w zakładce "Kontakt".</p>
                     </div>
                     <div class="col-sm-6">
                         <table>
                             <tr>
-                                <td class="text-responsive-small">Usługa 1</td>
-                                <td class="text-responsive-small">Usługa 2</td>
-                                <td class="text-responsive-small">Usługa 3</td>
+                                <td class="text-responsive-small">Pakiet srebrny</td>
+                                <td class="text-responsive-small">Pakiet złoty</td>
+                                <td class="text-responsive-small">Pakiet platynowy</td>
                             </tr>
                             <tr>
-                                <td class="text-responsive-small">Lorem, ipsum dolor sit amet consectetur adipisicing
-                                    elit. Blanditiis</td>
-                                <td class="text-responsive-small">Lorem, ipsum dolor sit amet consectetur adipisicing
-                                    elit. Blanditiis</td>
-                                <td class="text-responsive-small">Lorem, ipsum dolor sit amet consectetur adipisicing
-                                    elit. Blanditiis</td>
+                                <td class="text-responsive-small">Grafika wykonana do 2 tygodni roboczych, 2
+                                    poprawki wliczone w cenę</td>
+                                <td class="text-responsive-small">Grafika wykonana do tygodnia roboczego, 4 poprawki
+                                    wliczone w cenę</td>
+                                <td class="text-responsive-small">Grafika wykonana do 3 dni roboczych, nieograniczona
+                                    ilość poprawek</td>
                             </tr>
                             <tr>
                                 <td class="text-responsive-small">300 zł</td>
-                                <td class="text-responsive-small">400 zł</td>
-                                <td class="text-responsive-small">6900 zł</td>
+                                <td class="text-responsive-small">3000 zł</td>
+                                <td class="text-responsive-small">30000 zł</td>
                             </tr>
                         </table>
                     </div>
@@ -163,16 +163,16 @@
                     <div class="col-sm-6">
                         <form>
                             <input type="text" name="imie" placeholder="Imię">
-                            <input type="email" name="mail" placeholder="E-Mail">
+                            <input type="email" name="mail" placeholder="E-mail">
                             <input type="text" name="temat" placeholder="Temat">
                             <textarea name="wiadomosc" placeholder="Twoja wiadomość..."></textarea>
                             <button>Wyślij</button>
                         </form>
                     </div>
                     <div class="col-sm-6">
-                        <p class="text-responsive">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
-                            sed itaque fugiat reprehenderit dolore nemo, totam delectus ut sequi enim! Dicta laudantium
-                            eaque aliquam deleniti enim cum sint quod dolores.</p>
+                        <p class="text-responsive">Aby się z nami skontaktować, wypełnij formularz kontaktowy. Jeśli
+                            potrzebujesz skontaktować się z nami bezpośrednio, jesteśmy dostępni tymi
+                            kanałami:<br />Numer tel.: +48 501 088 212<br />E-mail: kabel@otua.pl</p>
                     </div>
                 </div>
             </div>
