--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="keyword" content="grafika, obrazki, design, najlepsza firma">
-    <link rel="icon" href="img/icon.png"/>
+    <link rel="icon" href="img/icon.png" />
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>GRAFPOL</title>
@@ -14,14 +14,16 @@
 <body>
     <main>
         <section id="start" class="tlo wrapper">
-            <div class="container starter">
-                <div class="tekst">
-                    <h1 class="text-responsive-big nazwa">GRAFPOL</h1>
-                    <p class="text-responsive">Robimy grafiki lepiej niż inni</p>
+            <div class="wrapper tlo2">
+                <div class="container starter">
+                    <div class="tekst">
+                        <h1 class="text-responsive-big nazwa">GRAFPOL</h1>
+                        <p class="text-responsive">Robimy grafiki lepiej niż inni</p>
+                    </div>
+                    <a href="#ofirmie">
+                        <img src="img/arrow.svg" alt="Przejdź dalej!" class="strzalka">
+                    </a>
                 </div>
-                <a href="#ofirmie">
-                    <img src="img/arrow.svg" alt="Przejdź dalej!" class="strzalka">
-                </a>
             </div>
         </section>
 
