--- a/index.html
+++ b/index.html
@@ -84,32 +84,32 @@
                     <div class="row">
                         <div class="col-sm-6 col-lg-4 gal">
                             <figure>
-                                <img src="img/produkt4.jpg" alt="Galeria" class="img-fluid galimg">
+                                <img src="img/produkt1.jpg" alt="Galeria" class="img-fluid galimg">
                             </figure>
                         </div>
                         <div class="col-sm-6 col-lg-4 gal">
                             <figure>
-                                <img src="img/produkt4.jpg" alt="Galeria" class="img-fluid galimg">
+                                <img src="img/produkt2.jpg" alt="Galeria" class="img-fluid galimg">
                             </figure>
                         </div>
                         <div class="col-sm-6 col-lg-4 gal">
                             <figure>
-                                <img src="img/produkt4.jpg" alt="Galeria" class="img-fluid galimg">
+                                <img src="img/produkt3.jpg" alt="Galeria" class="img-fluid galimg">
                             </figure>
                         </div>
                         <div class="col-sm-6 col-lg-4 gal">
                             <figure>
-                                <img src="img/produkt4.jpg" alt="Galeria" class="img-fluid galimg">
+                                <img src="img/produkt4.png" alt="Galeria" class="img-fluid galimg">
                             </figure>
                         </div>
                         <div class="col-sm-6 col-lg-4 gal">
                             <figure>
-                                <img src="img/produkt4.jpg" alt="Galeria" class="img-fluid galimg">
+                                <img src="img/produkt5.png" alt="Galeria" class="img-fluid galimg">
                             </figure>
                         </div>
                         <div class="col-sm-6 col-lg-4 gal">
                             <figure>
-                                <img src="img/produkt4.jpg" alt="Galeria" class="img-fluid galimg">
+                                <img src="img/tlo.jpg" alt="Galeria" class="img-fluid galimg">
                             </figure>
                         </div>
                     </div>
@@ -169,7 +169,7 @@
                             <input type="email" name="mail" placeholder="E-mail">
                             <input type="text" name="temat" placeholder="Temat">
                             <textarea name="wiadomosc" placeholder="Twoja wiadomość..."></textarea>
-                            <button>Wyślij</button>
+                            <button type="submit" onclick=location.href="#kontakt">Wyślij</button>
                         </form>
                     </div>
                     <div class="col-sm-6">
