--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             </div>
         </section>
         <footer>
-            <div class="footer">Michał Duszak 2DT OTUA</div>
+            <div class="footer">Michał Duszak 2DT</div>
         </footer>
     </main>
     <script>
