--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
                         </div>
                         <div class="col-sm-6 col-lg-4 gal">
                             <figure>
-                                <img src="img/produkt4.png" alt="Galeria" class="img-fluid galimg">
+                                <img src="img/produkt4.jpg" alt="Galeria" class="img-fluid galimg">
                             </figure>
                         </div>
                         <div class="col-sm-6 col-lg-4 gal">
                             <figure>
-                                <img src="img/produkt5.png" alt="Galeria" class="img-fluid galimg">
+                                <img src="img/produkt5.jpg" alt="Galeria" class="img-fluid galimg">
                             </figure>
                         </div>
                         <div class="col-sm-6 col-lg-4 gal">
