--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="wrapper tlo2">
                 <div class="container starter">
                     <div class="tekst">
-                        <h1 class="text-responsive-big nazwa">GRAFPOL</h1>
+                        <h1 class="text-responsive-big nazwa" style="font-size: 7em;">GRAFPOL</h1>
                         <p class="text-responsive">Robimy grafiki lepiej niż inni</p>
                     </div>
                     <a href="#ofirmie">
